# crewai-multimail

./: README.md  pyproject.toml
crewai_multimail/: __init__.py  tools.py
examples/: support_crew.py
