[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-multimail"
version = "0.1.1"
description = "CrewAI tools for MultiMail — give your CrewAI agents email capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "MultiMail", email = "dev@multimail.dev" }]
keywords = ["crewai", "email", "ai", "agents", "multimail", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "multimail>=0.1.0",
    "crewai>=0.41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://multimail.dev"
Documentation = "https://multimail.dev/docs"
Repository = "https://github.com/multimail-dev/crewai-multimail"
